apps/app-1/versions/v1-0-0/base/service.yaml
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: something-v1-0-0
  namespace: app-1
  labels:
    app: app-1
    version: v1-0-0
    deployment: something
spec:
  selector:
    app: app-1
    version: v1-0-0
    deployment: something
  ports:
    - name: "webserver"
      protocol: "TCP"
      port: 8080
