apps/app-1/versions/v1-0-0/base/route-default.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: app-1-something-v1-0-0
  namespace: app-1
spec:
  parentRefs:
  - kind: Gateway
    name: external-http
    namespace: gateway
  hostnames:
  - "app-1.gateway.american-broomstick.com"
  rules:
  - backendRefs:
    - kind: Service
      name: something-v1-0-0
      namespace: app-1
      port: 8080
